Updated content from 11ty template

--- a/styles/components/_blog.scss
+++ b/styles/components/_blog.scss
@@ -114,7 +114,7 @@
                   padding-left: $base-padding * 0.5;
                   margin-left: $base-margin * 1.5;
                }
-               &:not(:first-child)::after {
+               &::after {
                   position: absolute;
                   content: '';
                   background: $color-text-light;
