--- a/styles/_root.scss
+++ b/styles/_root.scss
@@ -195,7 +195,7 @@ a {
       }
       &-body {
         padding: 0;
-        .card-text {
+        .card-text, .card-text p {
           line-height: 29.7px;
           color: $color-text-light;
           font-size: $base_font-size * 1.1;
@@ -211,25 +211,11 @@ a {
           padding-left: $base-padding * 1.6;
           li {
             position: relative;
-            list-style: none;
             line-height: 29.7px;
             color: $color-text-light;
             font-size: $base_font-size * 1.1;
             font-weight: 500;
             margin-bottom: $base-margin * 1.25;
-            &::after {
-              position: absolute;
-              content: "";
-              background: $color-header;
-              width: 10px;
-              height: 2px;
-              top: 20%;
-              left: -3%;
-              @include media-breakpoint-down-xxl {
-                top: 13%;
-                left: -5%;
-              }
-            }
           }
         }
       }
