--- a/styles/components/_counter-up.scss
+++ b/styles/components/_counter-up.scss
@@ -68,6 +68,11 @@
         }
       }
     }
+    &:nth-child(4) {
+       .counter-up-content-item {
+          border-right: 0;
+       }
+    }
 
     &-item {
       border-top: 1px solid $color-primary-light;
