Importe vendor CSS as part of the theme

--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -29,6 +29,9 @@ PROJECT:	JACKCREATIVE
 
 
 ===================== */
+@import "../public/vendor/bootstrap/bootstrap.min.css";
+@import "../public/vendor/phosphor-icons/css/phosphor.css";
+@import "../public/vendor/magnific-popup/magnific-popup.css";
 
 @import "variables";
 @import "mixins";
